# saebooks-desktop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: desktop-release.yml
deploy/appimage/: AppRun.sh  entrypoint.sh  requirements.txt  saebooks-desktop.desktop
deploy/windows/: setup_freeze.py
proto/: saebooks.proto
saebooks_desktop/: __init__.py  __main__.py  licence.py  main.py  main_window.py  settings.py
saebooks_desktop/cache/: __init__.py  db.py  models.py  outbox.py  sync.py
scripts/: build_appimage.sh  build_msi.bat
tests/: test_account_ranges_desktop.py  test_accounts_view.py  test_ai_extraction_desktop.py  test_bank_rules_desktop.py  test_banking_view.py  test_bill_detail.py  test_bill_form.py  test_bills_view.py  test_budgets.py  test_cache.py  test_cache_bootstrap.py  test_conflict.py  test_contacts_view.py  test_credit_notes.py  test_csv_export.py  test_entrypoint.py  test_fixed_assets.py  test_grpc_client.py  test_invoice_detail.py  test_invoice_form.py  test_invoices_view.py  test_items_view.py  test_journal_entries_view.py  test_journal_entry_form.py  test_journal_templates_desktop.py  test_main_window_first_run_gate.py  test_main_window_navigation.py  test_payment_form.py  test_payments_view.py  test_preferences_dialog.py  test_projects.py  test_recurring_invoices.py  test_reports_aged_payables.py  test_reports_aged_receivables.py  test_reports_balance_sheet.py  test_reports_base.py  test_reports_profit_loss.py  test_reports_trial_balance.py  test_reports_view.py  test_search_view.py  (+11 more)
(+85 files in other folders)
