[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saebooks-desktop"
version = "0.1.3"
description = "SAE Books native desktop client (PySide6/Qt)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]
packaging = [
    "python-appimage>=1.2",
    "cx_Freeze>=7.2",
]

[project.scripts]
saebooks-desktop = "saebooks_desktop.main:main"

[project.gui-scripts]
saebooks-desktop-gui = "saebooks_desktop.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["saebooks_desktop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
